--- a/src/Sesile/DelegationsBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/edit.html.twig
@@ -11,7 +11,7 @@
         </div>
 
         <span class="deleg-to-someone">Vous déléguez à &nbsp;</span><img class="userpicture"
-                                                                            src="{{ asset(upload_path ~ delegation.user.path) }}"/>{{ delegation.user.Prenom }} {{ delegation.user.Nom }}
+                                                                            src="{{ asset(upload_path ~ delegation.user.path) }}"/>{{ delegation.user.Nom }} {{ delegation.user.Prenom }}
 
 
 
