--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -8,7 +8,7 @@
         </div>
         <br>
 
-        <form id="new_classeur" class="form-horizontal" role="form" action="{{ path('classeur_create') }}" method="POST">
+        <form id="new_classeur" name="new_classeur" class="form-horizontal" role="form" action="{{ path('classeur_create') }}" method="POST">
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
@@ -57,6 +57,8 @@
 		</button>
 	    </a>
 	    </div>
+            {#<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">#}
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}">
         </form>
     </div>
 {% endblock %}
