--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -135,7 +135,7 @@
 		    <li>
 			<a href="{{ path("groupes") }}">
 			    <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
-			    Gestion des groupes
+			    Services organisationnels
 			</a>
 		    </li>
             {% if is_granted('ROLE_SUPER_ADMIN') %}
