--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/index.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/index.html.twig
@@ -4,7 +4,7 @@
     <div class="bloc_page">
         <div class="titre_page">
             <span class="glyphicon glyphicon-floppy-saved"></span>
-            &nbsp;&nbsp;&nbsp;Liste des groupes fonctionnels
+            &nbsp;&nbsp;&nbsp;Liste des services organisationnels
         </div>
         <table class="table tableau dtables">
             <thead>
@@ -33,7 +33,7 @@
         </table>
         <a href="{{ path("create_groupe") }}">
             <button type="button" class="btn btn-default navbar-btn">
-                Ajouter un groupe fonctionnel
+                Ajouter un service organisationnel
             </button>
         </a>
         <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
