--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -24,7 +24,7 @@
                         </select>
                         -->
 
-                        <label for="type" class="col-lg-2 control-label">Groupe fonctionnel</label>
+                        <label for="type" class="col-lg-2 control-label">Service organisationnel</label>
 
                         <div class="col-lg-3">
                             <select id="userGroupe" name="userGroupe" class="form-control" required="required">
