--- a/src/Sesile/DocumentBundle/Resources/views/Document/editForClasseur.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/editForClasseur.html.twig
@@ -1,9 +1,9 @@
 <div id="doc">
     <div id="fichiers" class="dropzone"></div>
     <br>
-    {% if classeur.type.nom == 'Helios' %}
-        <a href="{{ path('visu', {'id':classeur.documents[0].id}) }}"
-           class="btn btn-warning" role="button">
+    {#{% if classeur.type.nom == 'Helios' %}#}
+    {% if classeur.type.id == 2 %}
+        <a href="{{ path('visu', {'id':classeur.documents[0].id}) }}" class="btn btn-warning" role="button">
             <span class="glyphicon glyphicon-eye-open"></span>
             &nbsp;Visualiser
         </a>
